# aura-lily-public

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
firmware/esp32/main/: CMakeLists.txt  Kconfig.projbuild  aura_config.h  idf_component.yml  main.c
firmware/esp32/main/audio/: audio_frontend.c  audio_frontend.h  audio_pipeline.c  audio_pipeline.h  es7210.c  es7210.h  es8311.c  es8311.h  music_library.c  music_library.h  music_player.c  music_player.h  opus_bridge.cc  opus_bridge.h  opus_decode_bridge.cc  opus_decode_bridge.h  sfx.c  sfx.h  wake_word.c  wake_word.h
firmware/esp32/main/core/: state_machine.c  state_machine.h
firmware/esp32/main/display/: atlas.c  atlas.h  dither.c  dither.h  renderer.c  renderer.h  rlcd_driver.c  rlcd_driver.h
firmware/esp32/main/input/: buttons.c  buttons.h
firmware/esp32/main/minigame/: minigame_battle.c  minigame_battle.h  minigame_data.c  minigame_data.h  minigame_protocol.c  minigame_protocol.h  minigame_render.c  minigame_render.h  minigame_state.c  minigame_state.h
firmware/esp32/main/network/: net_discovery.c  net_discovery.h  wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
firmware/esp32/main/protocol/: messages.c  messages.h
firmware/esp32/main/sensors/: pcf85063.c  pcf85063.h  shtc3.c  shtc3.h
firmware/esp32/main/storage/: sd_card.c  sd_card.h
firmware/esp32/main/ui/: font.c  font.h  layout.c  layout.h  panels.c  panels.h  state_helpers.c  state_helpers.h  status_bar.c  status_bar.h
firmware/esp32/main/usb/: usb_storage_mode.c  usb_storage_mode.h
integrations/: __init__.py
tests/: test_aura_persona_gateway.py  test_gateway_kb_stream.py  test_hermes_lily_cli.py  test_knowledge.py
tools/: agent_provider_doctor.py  agent_provider_gate.py  (+6 more)
(+53 files in other folders)
